# agentcontrol-bridge-installer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_key.rs  bridge.rs  deps.rs  git_cfg.rs  mod.rs  pair.rs  shell.rs  systemd.rs  ubuntu.rs  wsl.rs
src/wizard/: Wizard.tsx  api.ts  installRunner.ts  state.ts  useStepRunner.ts
src/wizard/components/: InputField.tsx  LogStream.tsx  ProgressBar.tsx  StepFrame.tsx
src/wizard/screens/: ClaudeAuth.tsx  Done.tsx  Installing.tsx  Setup.tsx  SignIn.tsx
src/wizard/steps/: BridgeBuild.tsx  BridgeSource.tsx  ClaudeCli.tsx  ClaudeOauth.tsx  Configuration.tsx  Done.tsx  EnvGen.tsx  GitConfig.tsx  NodeInstall.tsx  NpmInstall.tsx  Pair.tsx  SystemDeps.tsx  UbuntuSetup.tsx  Welcome.tsx  WslSetup.tsx
