[package]
name = "agentcontrol-bridge-installer"
version = "0.0.7"
description = "AgentControl Bridge installer wizard — Tauri 2.x app."
authors = ["AgentControl"]
edition = "2021"

[lib]
name = "agentcontrol_bridge_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "time"] }
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures = "0.3"
